--- a/catalog.html
+++ b/catalog.html
@@ -9,6 +9,9 @@
 <body>
     <header class="page-header">
         <nav class="navigation">
+            <a class="navigation-logo" href="index.html">
+                <img class="page-header-logo" alt="Логотип Седона" src="">
+              </a>
             <ul class="navigation-list">
                 <li class="navigation-item">
                     <a class="page-header-logo">
