Сделал Разметку Catalog.html

--- a/index.html
+++ b/index.html
@@ -8,84 +8,92 @@
 
 <body>
   <header class="page-header">
-    <nav class="navigation">
-      <ul class="navigation-list">
-        <li class="navigation-item">
-          <a class="page-header-logo">
-            <img class="logo" src="" alt="Логотип Седона">
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="main.html">Главная</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="about.html">О седоне</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
-        </li>
-      </ul>
-      <ul class="navigation-list navigation-user">
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">
-              Поиск
-            </span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">
-              Избранное
-            </span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">
-              Хочу сюда!
-            </span>
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <div class="container">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="page-header-logo">
+              <img class="logo" src="#" alt="Логотип Седона">
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Избранное
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Хочу сюда!
+              </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
+  
   <main class="main-index">
+    <section>
+      <div class="container">
     <h1 class="visually-hidden">Добро пожаловать в великолепное место Седона </h1>
-    <img class="picture-Sedona" src="" alt="Седона">
+    <img class="picture-Sedona" src="#" alt="Седона">
     <h2>Седона — небольшой городок в Аризоне,
       заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+    </div>
+    </section>
     <section class="reasons">
+      <div class="container">
       <h2 class="visually-hidden">Причины</h2>
       <ul class="reasons-list">
         <li class="reasons-item">
           <h3 class="reasons-title">Настоящий городок</h3>
           <p class="advantages-description-short">— №1 —</p>
           <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img class="picture-city" src="" alt="Город Седона">
+          <img class="picture-city" src="#" alt="Город Седона">
         </li>
         <li class="advantages-item">
-          <p><img class="picture-house" src="" alt="Дом"></p>
+          <p><img class="picture-house" src="#" alt="Дом"></p>
           <h3 class="advantages-title">Жилье</h3>
           <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
             всё как в кино!</p>
         </li>
         <li class="advantages-item">
-          <p><img class="picture-burger" src="" alt="Бургер"></p>
+          <p><img class="picture-burger" src="#" alt="Бургер"></p>
           <h3 class="advantages-title">Еда</h3>
           <p class="advantages-description">Всегда заказывайте
             топовый фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="advantages-item">
-          <p><img class="picture-box-gift" src="" alt="Подарочная Коробка"></p>
+          <p><img class="picture-box-gift" src="#" alt="Подарочная Коробка"></p>
           <h3 class="advantages-title">Сувениры</h3>
           <p class="advantages-description">Не только китайского,
             но и настоящего местного производства!</p>
         </li>
         <li class="advantages-item">
-          <img class="picture-bridge-devil" src="" alt="Мост Дьявола">
-          <h3 class="advantages-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+          <img class="picture-bridge-devil" src="#" alt="Мост Дьявола">
+          <h3 class="advantages-title">там есть мост дьявола</h3>
           <p class="advantages-description-short">— №2 —</p>
           <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </li>
@@ -108,50 +116,51 @@
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ul>
+      </div>
     </section>
     <section class="search-hotel">
+      <div class="container">
       <h2 class="search-hotel-title">Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="button button-search-hotel" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
-      
+    </div>
+    </section>
   </main>
   <footer class="form-footer">
     <section class="footer-email">
+      <div class="container">
       <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post">
-
-        <input type="text" name="mailing-date" placeholder="Ваш E-mail">
+        <label for="mailing"></label>
+        <input id="mailing" type="text" name="mailing-date" placeholder="Ваш E-mail">
 
         <button class="button" type="submit">Подписаться</button>
       </form>
+      </div>
     </section>
     <section class="footer-social">
       <ul class="footer-social-list">
         <li class="footer-social-item">
-          <a class="button" href="#">
+          <a class="social-link" href="#">
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
-        
+
         <li class="footer-social-item">
-          <a class="button" href="#"><!--  -->
+          <a class="social-link" href="#">
             <span class="visually-hidden">ВКонтакте</span>
           </a>
         </li>
         <li class="footer-social-item">
-          <a class="button" href="#">
+          <a class="social-link" href="#">
             <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
       </ul>
     </section>
-      <section class="footer-contacts">
-        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </section>
-      <section class="footer-htmlacademy-link">
-        <a class="page-footer-logo">
-          <img class="logotip" src="" alt="htmlacademy">
-          <a class="htmlacademy-logo" href="https://htmlacademy.ru/">.html academy</a>
-      </section>
+      <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="page-footer-logo" > 
+        <img class="logotip" src="#" alt="htmlacademy">
+      </a>
   </footer>
 </body>
 
