--- a/catalog.html
+++ b/catalog.html
@@ -68,76 +68,78 @@
                     <a class="breadcrumbs-link"> Гостиницы</a>
                 </li>
             </ul>
-        </header>
-        <section class="catalog-products">
-            <div class="container">
-                <h2 class="visually-hidden"> Список Гостинец с фильтрами</h2>
-                <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-                    <fieldset class="catalog-filter-group">
-                        <legend class="catalog-filter-title">Инфраструктура:</legend>
-                        <ul class="catalog-filter-list">
-                            <li class="catalog-filter-item">
-                                <label class="control">
-                                    <input class="control-input" type="checkbox" name="Pool" checked>
-                                    Бассейн
-                                </label>
-                            </li>
-                            <li class="catalog-filter-item">
-                                <label class="control">
-                                    <input class="control-input" type="checkbox" name="parking" checked>
-                                    Парковка
-                                </label>
-                            </li>
-                            <li class="catalog-filter-item">
-                                <label class="control">
-                                    <input class="control-input" type="checkbox" name="WiFI">
-                                    Wi-FI
-                                </label>
-                            </li>
-                        </ul>
-                    </fieldset>
-                    <fieldset class="catalog-filter-group">
-                        <legend class="catalog-filter-title">Тип жилья:</legend>
-                        <ul class="catalog-filter-list">
-                            <li class="catalog-filter-item">
-                                <label class="control">
+            <section class="catalog-products">
+                <div class="container">
+                    <h2 class="visually-hidden"> Список Гостинец с фильтрами</h2>
+                    <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+                        <fieldset class="catalog-filter-group">
+                            <legend class="catalog-filter-title">Инфраструктура:</legend>
+                            <ul class="catalog-filter-list">
+                                <li class="catalog-filter-item">
+                                    <label class="control">
+                                        <input class="control-input" type="checkbox" name="Pool" checked>
+                                        Бассейн
+                                    </label>
+                                </li>
+                                <li class="catalog-filter-item">
+                                    <label class="control">
+                                        <input class="control-input" type="checkbox" name="parking" checked>
+                                        Парковка
+                                    </label>
+                                </li>
+                                <li class="catalog-filter-item">
+                                    <label class="control">
+                                        <input class="control-input" type="checkbox" name="WiFI">
+                                        Wi-FI
+                                    </label>
+                                </li>
+                            </ul>
+                        </fieldset>
+                        <fieldset class="catalog-filter-group">
+                            <legend class="catalog-filter-title">Тип жилья:</legend>
+                            <ul class="catalog-filter-list">
+                                <li class="catalog-filter-item">
+                                    <label class="control"></label>
                                     <input class="control-input" type="radio" name="hotel">
                                     Гостиница
-                            </li>
-                            <li class="catalog-filter-item">
-                                <label class="control">
+                                </li>
+                                <li class="catalog-filter-item">
+                                    <label class="control"></label>
                                     <input class="control-input" type="radio" name="motel">
                                     Мотель
-                            </li>
-                            <li class="catalog-filter-item">
-                                <label class="control">
+                                </li>
+                                <li class="catalog-filter-item">
+                                    <label class="control"></label>
                                     <input class="control-input" type="radio" name="apartment"> ">
                                     Апартаменты
-                            </li>
-                        </ul>
-                        </label>
-                    </fieldset>
-                    <button class="button" type="submit">Применить</button>
-                </form>
-                <select class="select-control" aria-label="Сортировка">
-                    <option value="cheap">Сначала дешёвые</option>
-                    <option value="popular">Сначала популярное</option>
-                    <option value="expensive">Сначала дорогое</option>
-                </select>
-                <a href="#" class="button button-light">
-                    <span class="visually-hidden">Показать таблицу</span>
-                </a>
-                <a href="#" class="button button-light">
-                    <span class="visually-hidden">Показать слайдшоу</span>
-                </a>
-                <a class="button" href="#">
-                    <span class="visually-hidden">Показать список</span>
-                </a>
-            </div>
+                                </li>
+                            </ul>
+
+                        </fieldset>
+                    </form>
+                </div>
+            </section>
+            <button class="button" type="submit">Применить</button>
+
+            <select class="select-control" aria-label="Сортировка">
+                <option value="cheap">Сначала дешёвые</option>
+                <option value="popular">Сначала популярное</option>
+                <option value="expensive">Сначала дорогое</option>
+            </select>
+            <a href="#" class="button button-light">
+                <span class="visually-hidden">Показать таблицу</span>
+            </a>
+            <a href="#" class="button button-light">
+                <span class="visually-hidden">Показать слайдшоу</span>
+            </a>
+            <a class="button" href="#">
+                <span class="visually-hidden">Показать список</span>
+            </a>
+
             <ul class="product-list">
                 <li class="product-card">
                     <a class="product-card-link" href="product.html">
-                        <img class="product-card-image" src="" alt="">
+                        <img class="product-card-image" src="#" alt="">
                         <h3 class="product-card-title">Amara Resort & Spa</h3>
                     </a>
                     <b class="product-card-price">От 4000 ₽</b>
@@ -146,7 +148,7 @@
                 </li>
                 <li class="product-card">
                     <a class="product-card-link" href="product.html">
-                        <img class="product-card-image" src="" alt="">
+                        <img class="product-card-image" src="#" alt="">
                         <h3 class="product-card-title">Villas at Poco Diablo</h3>
                     </a>
                     <b class="product-card-price">От 5000 ₽</b>
@@ -155,7 +157,7 @@
                 </li>
                 <li class="product-card">
                     <a class="product-card-link" href="product.html">
-                        <img class="product-card-image" src="" alt="">
+                        <img class="product-card-image" src="#" alt="">
                         <h3 class="product-card-title">Desert Quail Inn</h3>
                     </a>
                     <b class="product-card-price">От 2500 ₽</b>
@@ -164,7 +166,7 @@
                 </li>
                 <li class="product-card">
                     <a class="product-card-link" href="product.html">
-                        <img class="product-card-image" src="" alt="">
+                        <img class="product-card-image" src="#" alt="">
                         <h3 class="product-card-title">GreenTree Inn</h3>
                     </a>
                     <b class="product-card-price">От 1500 ₽</b>
@@ -191,6 +193,7 @@
                     <a class="pagination-link" href="#">4</a>
                 </li>
                 <li class="pagination-item">
+
                     <a class="pagination-link" href="#">...</a>
                 </li>
                 <li class="pagination-item">
@@ -199,10 +202,10 @@
                 <li class="pagination-item">
                     <a class="pagination-link pagination-next" href="#">
                         <span class="visually-hidden">Следующая страница</span>
-
-
-
-        </section>
+                    </a>
+                </li>
+            </ul>
+        </header>
     </main>
     <footer class="form-footer">
         <section class="footer-email">
