--- a/catalog.html
+++ b/catalog.html
@@ -110,7 +110,7 @@
                                 </li>
                                 <li class="catalog-filter-item">
                                     <label class="control"></label>
-                                    <input class="control-input" type="radio" name="apartment"> ">
+                                    <input class="control-input" type="radio" name="apartment"> 
                                     Апартаменты
                                 </li>
                             </ul>
