--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
   <header class="page-header">
     <div class="container">
       <nav class="navigation">
+        <a class="page-header-logo">
+          <img class="logo" src="#" alt="Логотип Седона">
+        </a>
         <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="page-header-logo">
-              <img class="logo" src="#" alt="Логотип Седона">
-            </a>
-          </li>
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
           </li>
@@ -52,115 +50,127 @@
       </nav>
     </div>
   </header>
-  
+
   <main class="main-index">
-    <section>
+    <section class="preview">
       <div class="container">
-    <h1 class="visually-hidden">Добро пожаловать в великолепное место Седона </h1>
-    <img class="picture-Sedona" src="#" alt="Седона">
-    <h2>Седона — небольшой городок в Аризоне,
-      заслуживающий большего!</h2>
-    <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-    </div>
+        <h1 class="visually-hidden">Добро пожаловать в великолепное место Седона </h1>
+        <div class="preview-picture">
+          <img class="picture-Sedona" src="#" alt="Седона">
+        </div>
+        <div class="preview-text">
+          <h2>Седона — небольшой городок в Аризоне,
+            заслуживающий большего!</h2>
+          <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        </div>
+      </div>
     </section>
-    <section class="reasons">
+    <section class="advantages">
       <div class="container">
-      <h2 class="visually-hidden">Причины</h2>
-      <ul class="reasons-list">
-        <li class="reasons-item">
-          <h3 class="reasons-title">Настоящий городок</h3>
-          <p class="advantages-description-short">— №1 —</p>
-          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img class="picture-city" src="#" alt="Город Седона">
-        </li>
-        <li class="advantages-item">
-          <p><img class="picture-house" src="#" alt="Дом"></p>
-          <h3 class="advantages-title">Жилье</h3>
-          <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
-            всё как в кино!</p>
-        </li>
-        <li class="advantages-item">
-          <p><img class="picture-burger" src="#" alt="Бургер"></p>
-          <h3 class="advantages-title">Еда</h3>
-          <p class="advantages-description">Всегда заказывайте
-            топовый фирменный бургер, вы не разочаруетесь!</p>
-        </li>
-        <li class="advantages-item">
-          <p><img class="picture-box-gift" src="#" alt="Подарочная Коробка"></p>
-          <h3 class="advantages-title">Сувениры</h3>
-          <p class="advantages-description">Не только китайского,
-            но и настоящего местного производства!</p>
-        </li>
-        <li class="advantages-item">
-          <img class="picture-bridge-devil" src="#" alt="Мост Дьявола">
-          <h3 class="advantages-title">там есть мост дьявола</h3>
-          <p class="advantages-description-short">— №2 —</p>
-          <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-title">Небольшая
-            площадь</h3>
-          <p class="advantages-description-short">— №3 —</p>
-          <p>Все достопримечательности находятся очень близко</p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-title">Красивая
-            дорога</h3>
-          <p class="advantages-description-short">— №4 —</p>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-title">Мало
-            туристов</h3>
-          <p class="advantages-description-short">— №5 —</p>
-          <p>Большинство едет в Гранд Каньон и толпится там</p>
-        </li>
-      </ul>
+        <h2 class="visually-hidden">Причины</h2>
+        <ol class="advantages-list">
+          <li class="advantages-item">
+            <div class="advantages-city">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-description-short">— №1 —</p>
+              <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <img class="picture-city" src="#" alt="Город Седона">
+              <ul class="advantages-list-city">
+                <li class="advantages-item">
+                  <p><img class="picture-house" src="#" alt="Дом"></p>
+                  <h3 class="advantages-title">Жилье</h3>
+                  <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
+                    всё как в кино!</p>
+                </li>
+                <li class="advantages-item">
+                  <p><img class="picture-burger" src="#" alt="Бургер"></p>
+                  <h3 class="advantages-title">Еда</h3>
+                  <p class="advantages-description">Всегда заказывайте
+                    топовый фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+                <li class="advantages-item">
+                  <p><img class="picture-box-gift" src="#" alt="Подарочная Коробка"></p>
+                  <h3 class="advantages-title">Сувениры</h3>
+                  <p class="advantages-description">Не только китайского,
+                    но и настоящего местного производства!</p>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-bridge-devil">
+              <img class="picture-bridge-devil" src="#" alt="Мост Дьявола">
+            </div>
+            <h3 class="advantages-title">там есть мост дьявола</h3>
+            <p class="advantages-description-short">— №2 —</p>
+            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая
+              площадь</h3>
+            <p class="advantages-description-short">— №3 —</p>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Красивая
+              дорога</h3>
+            <p class="advantages-description-short">— №4 —</p>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало
+              туристов</h3>
+            <p class="advantages-description-short">— №5 —</p>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ol>
       </div>
     </section>
     <section class="search-hotel">
       <div class="container">
-      <h2 class="search-hotel-title">Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="button button-search-hotel" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
-    </div>
+        <h2 class="search-hotel-title">Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button button-search-hotel" href="#">поиск гостиниц в седоне</a>
+      </div>
+    </section>
+    <section class="mailing-email">
+      <div class="container">
+        <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post">
+          <div class="maling-form-input">
+            <label for="mailing"></label>
+            <input id="mailing" type="text" name="mailing-date" placeholder="Ваш E-mail">
+            <button class="button" type="submit">Подписаться</button>
+          </div>
+        </form>
+      </div>
     </section>
   </main>
   <footer class="form-footer">
-    <section class="footer-email">
-      <div class="container">
-      <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post">
-        <label for="mailing"></label>
-        <input id="mailing" type="text" name="mailing-date" placeholder="Ваш E-mail">
-
-        <button class="button" type="submit">Подписаться</button>
-      </form>
-      </div>
-    </section>
-    <section class="footer-social">
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="social-link" href="#">
-            <span class="visually-hidden">Твиттер</span>
-          </a>
-        </li>
-
-        <li class="footer-social-item">
-          <a class="social-link" href="#">
-            <span class="visually-hidden">ВКонтакте</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a class="social-link" href="#">
-            <span class="visually-hidden">Инстаграм</span>
-          </a>
-        </li>
-      </ul>
-    </section>
+    <div class="container">
+      <section class="footer-social">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="social-link" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="social-link" href="#">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="social-link" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+        </ul>
+      </section>
       <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a class="page-footer-logo" > 
+      <a class="page-footer-logo">
         <img class="logotip" src="#" alt="htmlacademy">
       </a>
+    </div>
   </footer>
 </body>
 
