--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <div class="container">
       <nav class="navigation">
         <a class="page-header-logo">
-          <img class="logo" src="#" alt="Логотип Седона">
+          <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -137,7 +137,7 @@
           <ul class="product-list">
             <li class="product-card">
               <a class="product-card-link" href="product.html">
-                <img class="product-card-image" src="#" alt="">
+                <img class="product-card-image" src="images/hotel-1.jpg" width="300" height="211" alt="AmaraResort">
                 <h3 class="product-card-title">Amara Resort & Spa</h3>
               </a>
               <b class="product-card-price">От 4000 ₽</b>
@@ -155,7 +155,7 @@
             </li>
             <li class="product-card">
               <a class="product-card-link" href="product.html">
-                <img class="product-card-image" src="#" alt="">
+                <img class="product-card-image" src="images/hotel-2.jpg" width="300" height="211" alt="Villas">
                 <h3 class="product-card-title">Villas at Poco Diablo</h3>
               </a>
               <b class="product-card-price">От 5000 ₽</b>
@@ -173,7 +173,7 @@
             </li>
             <li class="product-card">
               <a class="product-card-link" href="product.html">
-                <img class="product-card-image" src="#" alt="">
+                <img class="product-card-image" src="images/hotel-3.jpg" width="300" height="211" alt="Desert">
                 <h3 class="product-card-title">Desert Quail Inn</h3>
               </a>
               <b class="product-card-price">От 2500 ₽</b>
@@ -190,7 +190,7 @@
             </li>
             <li class="product-card">
               <a class="product-card-link" href="product.html">
-                <img class="product-card-image" src="#" alt="">
+                <img class="product-card-image" src="images/hotel-4.jpg" width="300" height="211" alt="GreenTree">
                 <h3 class="product-card-title">GreenTree Inn</h3>
               </a>
               <b class="product-card-price">От 1500 ₽</b>
