--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <nav class="navigation">
         <a class="page-header-logo">
-          <img class="logo" src="#" alt="Логотип Седона">
+          <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -56,7 +56,7 @@
       <div class="container">
         <h1 class="visually-hidden">Добро пожаловать в великолепное место Седона </h1>
         <div class="preview-picture">
-          <img class="picture-Sedona" src="#" alt="Седона">
+          <img class="picture-Sedona"  src="images/Welcome_logo.svg" width="458" height="352" alt="Седона">
         </div>
         <div class="preview-text">
           <h2>Седона — небольшой городок в Аризоне,
@@ -74,7 +74,7 @@
               <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-description-short">— №1 —</p>
               <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-              <img class="picture-city" src="#" alt="Город Седона">
+              <img class="picture-city" src="images/sedona_hotel.jpg" width="800" height="384" alt="Город Седона">
               <ul class="advantages-list-city">
                 <li class="advantages-item">
                   <p><img class="picture-house" src="#" alt="Дом"></p>
@@ -99,7 +99,7 @@
           </li>
           <li class="advantages-item">
             <div class="advantages-bridge-devil">
-              <img class="picture-bridge-devil" src="#" alt="Мост Дьявола">
+              <img class="picture-bridge-devil" src="images/canyon.jpg" width="800" height="384" alt="Мост Дьявола">
             </div>
             <h3 class="advantages-title">там есть мост дьявола</h3>
             <p class="advantages-description-short">— №2 —</p>
