--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -69,67 +69,68 @@
       <div class="container">
         <h2 class="visually-hidden">Причины</h2>
         <ol class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item-custom">
             <div class="advantages-city">
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <p class="advantages-description-short">— №1 —</p>
-              <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <h3 class="advantages-title-heading">Настоящий городок</h3>
+              <p class="advantages-accent">— №1 —</p>
+              <p class="advantages-excerpt" >Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               <img class="picture-city" src="images/sedona_hotel.jpg" width="800" height="384" alt="Город Седона">
               <ul class="advantages-list-city">
                 <li class="advantages-item">
                   <p><img class="picture-house" src="#" alt="Дом"></p>
                   <h3 class="advantages-title">Жилье</h3>
-                  <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
+                  <p class="advantages-info">Рекомендуем пожить в настоящем мотеле,
                     всё как в кино!</p>
                 </li>
-                <li class="advantages-item">
+                <li class="advantages-item-fastfood">
                   <p><img class="picture-burger" src="#" alt="Бургер"></p>
-                  <h3 class="advantages-title">Еда</h3>
-                  <p class="advantages-description">Всегда заказывайте
+                  <h3 class="advantages-title-food">Еда</h3>
+                  <p class="advantages-info-eat">Всегда заказывайте
                     топовый фирменный бургер, вы не разочаруетесь!</p>
                 </li>
                 <li class="advantages-item">
                   <p><img class="picture-box-gift" src="#" alt="Подарочная Коробка"></p>
                   <h3 class="advantages-title">Сувениры</h3>
-                  <p class="advantages-description">Не только китайского,
+                  <p class="advantages-info">Не только китайского,
                     но и настоящего местного производства!</p>
                 </li>
               </ul>
             </div>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-custom">
             <div class="advantages-bridge-devil">
               <img class="picture-bridge-devil" src="images/canyon.jpg" width="800" height="384" alt="Мост Дьявола">
             </div>
-            <h3 class="advantages-title">там есть мост дьявола</h3>
-            <p class="advantages-description-short">— №2 —</p>
-            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <h3 class="advantages-title-heading">там есть мост дьявола</h3>
+            <p class="advantages-accent">— №2 —</p>
+            <p class="advantages-excerpt">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая
               площадь</h3>
             <p class="advantages-description-short">— №3 —</p>
-            <p>Все достопримечательности находятся очень близко</p>
+            <p class="advantages-info">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Красивая
               дорога</h3>
             <p class="advantages-description-short">— №4 —</p>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="advantages-info">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Мало
               туристов</h3>
             <p class="advantages-description-short">— №5 —</p>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
+            <p class="advantages-info">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
       </div>
     </section>
+    <div class="index-colums">
     <section class="search-hotel">
       <div class="container">
         <h2 class="search-hotel-title">Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="search-hotel-text">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="button button-search-hotel" href="#">поиск гостиниц в седоне</a>
       </div>
     </section>
@@ -137,6 +138,8 @@
       <div class="container">
         <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post">
           <div class="maling-form-input">
+            <h2 class="mailing-title">Подпишитесь на рассылку</h2>
+            <p class="mailing-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
             <label for="mailing"></label>
             <input id="mailing" type="text" name="mailing-date" placeholder="Ваш E-mail">
             <button class="button" type="submit">Подписаться</button>
@@ -144,6 +147,7 @@
         </form>
       </div>
     </section>
+    </div>
   </main>
   <footer class="form-footer">
     <div class="container">
@@ -168,7 +172,7 @@
       </section>
       <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="page-footer-logo">
-        <img class="logotip" src="#" alt="htmlacademy">
+        <img class="logotip" src="images/html_academy.svg" width="114" height="32" alt="htmlacademy">
       </a>
     </div>
   </footer>
