Сетки страниц на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Каталог</title>
     <link rel="stylesheet" href="styles/styles.css">
+
   </head>
 
   <body>
@@ -52,6 +53,7 @@
       </div>
     </header>
     <main class="main-inner">
+      <div class="page-container">
       <img class="blur-picture" src="#" alt="фоновое изображение седона">
       <section class="hotels-item">
         <div class="container">
@@ -117,6 +119,7 @@
           </form>
         </div>
       </section>
+      <div class="catalog-right-column">
       <div class="sorting-container">
       <section class="catalog-list">
         <div class="container">
@@ -210,6 +213,7 @@
             </ul>
           </section>
         </div>
+        </div>
       </section>
       <section class="pagination-list">
         <div class="container">
@@ -246,11 +250,14 @@
           </ul>
         </div>
       </section>
+    </div>
     </main>
     <section class="mailing-email">
       <div class="container">
         <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post">
           <div class="maling-form-input">
+            <h2 class="mailing-title">Подпишитесь на рассылку</h2>
+            <p class="mailing-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
             <label for="mailing"></label>
             <input id="mailing" type="text" name="mailing-date" placeholder="Ваш E-mail">
             <button class="button" type="submit">Подписаться</button>
@@ -259,6 +266,7 @@
       </div>
     </section>
     <footer class="form-footer">
+      <div class="page-footer-container"></div>
       <div class="container">
         <section class="footer-social">
           <ul class="footer-social-list">
@@ -281,9 +289,10 @@
         </section>
         <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="page-footer-logo">
-          <img class="logotip" src="#" alt="htmlacademy">
+          <img class="logotip" src="images/html_academy.svg" width="114" height="32" alt="htmlacademy">
         </a>
       </div>
+    </div>
     </footer>
   </body>
 
