--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <ul class="navigation-list navigation-user">
             <li class="navigation-item">
               <a class="navigation-link" href="#">
+
                 <span class="visually-hidden">
                   Поиск
                 </span>
@@ -35,17 +36,19 @@
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">
+
                 <span class="visually-hidden">
                   Избранное
                 </span>
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">
+              <a class="navigation-link" href="#"></a>
+                <button class="button button-basic" type="submit">хочу сюда!</button>
                 <span class="visually-hidden">
                   Хочу сюда!
                 </span>
-              </a>
+
             </li>
           </ul>
         </nav>
@@ -54,8 +57,7 @@
 
     <main class=" main-container main-index">
       <div class="page-container">
-      <section class="preview">
-        <div class="container">
+        <section class="preview">
           <h1 class="visually-hidden">Добро пожаловать в великолепное место Седона </h1>
           <div class="preview-picture">
             <img class="picture-Sedona" src="images/Welcome_logo.svg" width="458" height="352" alt="Седона">
@@ -65,77 +67,86 @@
               заслуживающий большего!</h2>
             <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
           </div>
-        </div>
-      </section>
-      <section class="advantages">
-        <div class="container">
-          <h2 class="visually-hidden">Причины</h2>
-          <ol class="advantages-list">
-            <li class="advantages-item  advantages-item-custom">
-              <div class="advantages-city">
-                <h3 class=" advantages-title advantages-title-heading">Настоящий городок</h3>
-                <p class=" advantages-description-short advantages-accent">— №1 —</p>
-                <p class="advantages-info  advantages-excerpt">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-                <img class="picture-city" src="images/sedona_hotel.jpg" width="800" height="384" alt="Город Седона">
-                <ul class="advantages-list-city">
-                  <li class="advantages-item">
-                    <p><img class="picture-house" src="#" alt="Дом"></p>
-                    <h3 class="advantages-title">Жилье</h3>
-                    <p class="advantages-info">Рекомендуем пожить в настоящем мотеле,
-                      всё как в кино!</p>
-                  </li>
-                  <li class="advantages-item advantages-item-fastfood">
-                    <p><img class="picture-burger" src="#" alt="Бургер"></p>
-                    <h3 class="advantages-title-food">Еда</h3>
-                    <p class="advantages-info-eat">Всегда заказывайте
-                      топовый фирменный бургер, вы не разочаруетесь!</p>
-                  </li>
-                  <li class="advantages-item">
-                    <p><img class="picture-box-gift" src="#" alt="Подарочная Коробка"></p>
-                    <h3 class="advantages-title">Сувениры</h3>
-                    <p class="advantages-info">Не только китайского,
-                      но и настоящего местного производства!</p>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="advantages-item advantages-item-custom">
-              <div class="advantages-bridge-devil">
-                <img class="picture-bridge-devil" src="images/canyon.jpg" width="800" height="384" alt="Мост Дьявола">
-              </div>
-              <h3 class=" advantages-title advantages-title-heading">там есть мост дьявола</h3>
-              <p class=" advantages-description-short advantages-accent">— №2 —</p>
-              <p class=" advantages  advantages-excerpt">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Небольшая
-                площадь</h3>
-              <p class="advantages-description-short">— №3 —</p>
-              <p class="advantages-info">Все достопримечательности находятся очень близко</p>
-            </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Красивая
-                дорога</h3>
-              <p class="advantages-description-short">— №4 —</p>
-              <p class="advantages-info">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Мало
-                туристов</h3>
-              <p class="advantages-description-short">— №5 —</p>
-              <p class="advantages-info">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-          </ol>
-        </div>
-      </section>
-    </div>
+        </section>
+        <section class="advantages">
+          <div class="container-advantages">
+            <h2 class="visually-hidden">Причины</h2>
+            <ol class="advantages-list">
+               <li class="advantages-item  advantages-item-custom">
+                <div class="advantages-city">
+                  <h3 class=" advantages-title advantages-title-heading">Настоящий городок</h3>
+                  <p class=" advantages-description-short advantages-accent">— №1 —</p>
+
+                  <p class="advantages-info  advantages-excerpt">Седона — не аттракцион для туристов, там течёт своя
+                    жизнь</p>
+                  </div>
+                  <div class="picture-sedona-city">
+                  <img class="picture-city" src="images/sedona_hotel.jpg" width="800" height="384" alt="Город Седона">
+                </div>
+                  <ul class="advantages-list-city">
+                    <li class="advantages-list-item">
+                      <div class="advantages-list-block">
+                      <p><img class="picture-house" src="#" alt="Дом"></p>
+                      <h3 class="advantages-title">Жилье</h3>
+                      <p class="advantages-info">Рекомендуем пожить в настоящем мотеле,
+                        всё как в кино!</p>
+                      </div>
+                    </li>
+                    <li class="advantages-list-item advantages-item-fastfood">
+                      <p><img class="picture-burger" src="#" alt="Бургер"></p>
+                      <h3 class="advantages-title advantages-title-food">Еда</h3>
+                      <p class="advantages-info advantages-info-eat">Всегда заказывайте
+                        топовый фирменный бургер, вы не разочаруетесь!</p>
+                    </li>
+                    <li class="advantages-list-item">
+                      <p><img class="picture-box-gift" src="#" alt="Подарочная Коробка"></p>
+                      <h3 class="advantages-title">Сувениры</h3>
+                      <p class="advantages-info">Не только китайского,
+                        но и настоящего местного производства!</p>
+                    </li>
+                  </ul>
+              </li>
+              <li class="advantages-item advantages-item-custom">
+                <div class="advantages-bridge-devil">
+                  <img class="picture-bridge-devil" src="images/canyon.jpg" width="800" height="384" alt="Мост Дьявола">
+                </div>
+                <div class="advantages-list-bridge">
+                <h3 class=" advantages-title advantages-title-heading">там есть мост дьявола</h3>
+                <p class=" advantages-description-short advantages-accent">— №2 —</p>
+                <p class=" advantages  advantages-excerpt">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </li>
+              <ul class="advantages-list-city">
+               <li class="advantages-list-item">
+                <h3 class="advantages-title">Небольшая
+                  площадь</h3>
+                <p class="advantages-description-short">— №3 —</p>
+                <p class="advantages-info">Все достопримечательности находятся очень близко</p>
+              </li>
+              <li class="advantages-list-item">
+                <h3 class="advantages-title advantages-title-road">Красивая
+                  дорога</h3>
+                <p class="advantages-description-short">— №4 —</p>
+                <p class="advantages-info">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="advantages-list-item">
+                <h3 class="advantages-title">Мало
+                  туристов</h3>
+                <p class="advantages-description-short">— №5 —</p>
+                <p class="advantages-info">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+            </div>
+          </ul>
+            </ol>
+          </div>
+        </section>
+      </div>
       <div class="index-colums">
         <section class="search-hotel">
           <div class="container">
             <h2 class="search-hotel-title">Заинтересовались?</h2>
             <p class="search-hotel-text">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
               гостиниц в Седоне</p>
-            <a class="button button-search-hotel" href="#">поиск гостиниц в седоне</a>
+            <a class="button button-basic" href="#">поиск гостиниц в седоне</a>
           </div>
         </section>
         <section class="mailing-email">
@@ -180,7 +191,7 @@
           <img class="logotip" src="images/html_academy.svg" width="114" height="32" alt="htmlacademy">
         </a>
       </div>
-    </div>
+
     </footer>
   </body>
 
