--- a/5/catalog.html
+++ b/5/catalog.html
@@ -148,7 +148,7 @@
                   <h3 class="product-card-title">Amara Resort & Spa</h3>
                 </a>
                 <b class="product-card-price">От 4000 ₽</b>
-                <a class="product-info-button button" href="#">Подробнее</a>
+                <a class="product-info-button button-basic" href="#">Подробнее</a>
                 <a class="product-selected-button button" href="#">в Избранное</a>
                 <div class="rating-stars">
                   <span class="rating-star"></span>
@@ -166,8 +166,8 @@
                   <h3 class="product-card-title">Villas at Poco Diablo</h3>
                 </a>
                 <b class="product-card-price">От 5000 ₽</b>
-                <a class="product-info-button button" href="#">Подробнее</a>
-                <a class="product-selected-button button" href="#">в Избранном</a>
+                <a class="product-info-button button-basic" href="#">Подробнее</a>
+                <a class="product-selected-button button-select" href="#">в Избранном</a>
                 <div class="rating-stars">
                   <span class="rating-star"></span>
                   <span class="rating-star"></span>
@@ -184,7 +184,7 @@
                   <h3 class="product-card-title">Desert Quail Inn</h3>
                 </a>
                 <b class="product-card-price">От 2500 ₽</b>
-                <a class="product-info-button button" href="#">Подробнее</a>
+                <a class="product-info-button button-basic" href="#">Подробнее</a>
                 <a class="product-selected-button button" href="#">В Избранное</a>
                 <div class="rating-stars">
                   <span class="rating-star"></span>
@@ -201,7 +201,7 @@
                   <h3 class="product-card-title">GreenTree Inn</h3>
                 </a>
                 <b class="product-card-price">От 1500 ₽</b>
-                <a class="product-info-button button" href="#">Подробнее</a>
+                <a class="product-info-button button-basic" href="#">Подробнее</a>
                 <a class="product-selected-button button" href="#">В Избранное</a>
                 <div class="rating-stars">
                   <span class="rating-star"></span>
